# frijolero

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  flake.nix  justfile
assets/: bean_platformer TEST.ldtk  bean_platformer.ldtk
assets/examples/platformer/: example.ldtk
assets/levels/SamTest/: HallwayOfBabel.ldtk  HallwayOfBabel2.ldtk  TowerOfBabel.ldtk  levelEdits.ldtk
assets/levels/SamTest/HallwayOfBabel2/backups/17f68300-c210-11ef-91ce-977f12ea2182_2025-04-08_20-46-20/: HallwayOfBabel2.ldtk
assets/levels/SamTest/HallwayOfBabel2/backups/17f68300-c210-11ef-91ce-977f12ea2182_2025-04-08_20-54-05/: HallwayOfBabel2.ldtk
assets/levels/SamTest/HallwayOfBabel2/backups/17f68300-c210-11ef-91ce-977f12ea2182_2025-04-08_20-55-27/: HallwayOfBabel2.ldtk
assets/levels/SamTest/HallwayOfBabel2/backups/17f68300-c210-11ef-91ce-977f12ea2182_2025-04-08_21-01-39/: HallwayOfBabel2.ldtk
assets/levels/test/: level.ldtk
examples/platformer/: colliders.rs  game_flow.rs  main.rs  player.rs  walls.rs
src/: actions.rs  camera.rs  climbing.rs  colliders.rs  enemy.rs  game_flow.rs  ground_detection.rs  jumping.rs  lib.rs  main.rs  obstacle.rs  platform.rs  player.rs  spike.rs  timer_helpers.rs  walls.rs
