[package]
name = "bean-platformer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
bevy_ecs_ldtk = "0.11.0"
bevy_ecs_tilemap = "0.15.0"
bevy_rapier2d = "0.28.0"
iyes_loopless = "0.9.1"
serde = "1.0.217"
serde_json = "1.0.134"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
