[package]
name = "bean-platformer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking", "file_watcher"] }
bevy-tnua = "0.21.0"
bevy-tnua-rapier2d = "0.9.0"
bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
bevy_ecs_ldtk = "0.11.0"
bevy_ecs_tilemap = "0.15.0"
bevy_rapier2d = "0.28.0"
clap = { version = "4.5.35", features = ["derive"] }
iyes_loopless = "0.9.1"
leafwing-input-manager = "0.16.0"
serde = "1.0.217"
serde_json = "1.0.134"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
